drkns 30.07.2020 19:00:15 +0100 - build 5647

1. Уточнение 5646.

drkns 29.07.2020 23:39:52 +0100 - build 5646

1. Рефакторинг.

2. gh-261 Mistake in help file
   На самом деле нет.
   Там же - добавлена пара новых форматов отображения имени в Info Panel.

3. Clang analyzer warnings.

4. Переписан скринсейвер (а почему бы и нет).

drkns 22.07.2020 01:35:45 +0100 - build 5645

1. Уточнение 5643.

drkns 21.07.2020 19:49:10 +0100 - build 5644

1. Мелкое уточнение логики запускателя.

drkns 21.07.2020 17:34:53 +0100 - build 5643

1. Продолжение 5631.1.

drkns 20.07.2020 19:33:22 +0100 - build 5642

1. Подсказки по клавишам в различных меню теперь генерируются кодом.

drkns 19.07.2020 01:44:02 +0100 - build 5641

1. Рефакторинг.

MZK 11.07.2020 21:04:57 -0700

1. Перевёл на английский оставшиеся страницы справки far:config; дочистил eng/TechInfo.txt.

drkns 11.07.2020 02:48:48 +0100 - build 5640

1. Рефакторинг.

2. Для сборки теперь можно использовать Clang с GNU toolchain.

drkns 07.07.2020 17:57:54 +0100 - build 5639

1. Продолжение 5631.1.

2. Рефакторинг.

drkns 06.07.2020 18:56:37 +0100 - build 5638

1. Новые версии fmt, tinyxml2, Catch2.

drkns 05.07.2020 19:49:40 +0100 - build 5637

1. Продолжение 5370 - пропуск излишней прокрутки при запуске.

drkns 05.07.2020 18:37:32 +0100 - build 5636

1. VS 2019 16.7 & GCC warnings.

drkns 05.07.2020 15:10:15 +0100 - build 5635

1. Очередная попытка обхода багов Windows 10 console host.

drkns 04.07.2020 13:30:24 +0100 - build 5634

1. Уточнение 5598.

drkns 04.07.2020 12:52:29 +0100 - build 5633

1. gh-250: Use ArcLite for .apk and .aar by default

drkns 04.07.2020 02:32:19 +0100 - build 5632

1. C++20 warnings.

2. VS 2019 16.7 warnings.

3. Пара мелких оптимизаций форматирования размеров.

drkns 03.07.2020 02:42:42 +0100 - build 5631

1. Продолжение и углубление 5630.1:
   - Множественные критерии сортировки можно определять перманентно: Ctrl+F12, F4 на режиме, Ins/Del/CtrlUp/CtrlDown/CtrlR.