@@ -109,6 +109,7 @@ if not exist $(BootstrapDir) mkdir $(BootstrapDir)</Command>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <ConformanceMode>true</ConformanceMode>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <UseFullPaths>false</UseFullPaths>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0409</Culture>
