@@ -651,59 +651,59 @@ bool MkSymLink(string_view const Target, string_view const LinkName, ReparsePoin
 	}
 }
 
-static string reparse_tag_to_string(DWORD ReparseTag)
+static string_view reparse_tag_to_string(DWORD ReparseTag)
 {
 	switch (ReparseTag)
 	{
 	case IO_REPARSE_TAG_MOUNT_POINT:                 return msg(lng::MListJunction);
 	case IO_REPARSE_TAG_SYMLINK:                     return msg(lng::MListSymlink);
-	case IO_REPARSE_TAG_HSM:                         return L"HSM"s;
-	case IO_REPARSE_TAG_HSM2:                        return L"HSM2"s;
-	case IO_REPARSE_TAG_SIS:                         return L"SIS"s;
-	case IO_REPARSE_TAG_WIM:                         return L"WIM"s;
-	case IO_REPARSE_TAG_CSV:                         return L"CSV"s;
-	case IO_REPARSE_TAG_DFS:                         return L"DFS"s;
-	case IO_REPARSE_TAG_DFSR:                        return L"DFSR"s;
-	case IO_REPARSE_TAG_DEDUP:                       return L"DEDUP"s;
-	case IO_REPARSE_TAG_NFS:                         return L"NFS"s;
-	case IO_REPARSE_TAG_FILE_PLACEHOLDER:            return L"FILE PLACEHOLDER"s;
-	case IO_REPARSE_TAG_WOF:                         return L"WOF"s;
-	case IO_REPARSE_TAG_WCI:                         return L"WCI"s;
-	case IO_REPARSE_TAG_WCI_1:                       return L"WCI 1"s;
-	case IO_REPARSE_TAG_GLOBAL_REPARSE:              return L"GLOBAL_REPARSE"s;
-	case IO_REPARSE_TAG_CLOUD:                       return L"CLOUD"s;
-	case IO_REPARSE_TAG_CLOUD_1:                     return L"CLOUD 1"s;
-	case IO_REPARSE_TAG_CLOUD_2:                     return L"CLOUD 2"s;
-	case IO_REPARSE_TAG_CLOUD_3:                     return L"CLOUD 3"s;
-	case IO_REPARSE_TAG_CLOUD_4:                     return L"CLOUD 4"s;
-	case IO_REPARSE_TAG_CLOUD_5:                     return L"CLOUD 5"s;
-	case IO_REPARSE_TAG_CLOUD_6:                     return L"CLOUD 6"s;
-	case IO_REPARSE_TAG_CLOUD_7:                     return L"CLOUD 7"s;
-	case IO_REPARSE_TAG_CLOUD_8:                     return L"CLOUD 8"s;
-	case IO_REPARSE_TAG_CLOUD_9:                     return L"CLOUD 9"s;
-	case IO_REPARSE_TAG_CLOUD_A:                     return L"CLOUD A"s;
-	case IO_REPARSE_TAG_CLOUD_B:                     return L"CLOUD B"s;
-	case IO_REPARSE_TAG_CLOUD_C:                     return L"CLOUD C"s;
-	case IO_REPARSE_TAG_CLOUD_D:                     return L"CLOUD D"s;
-	case IO_REPARSE_TAG_CLOUD_E:                     return L"CLOUD E"s;
-	case IO_REPARSE_TAG_CLOUD_F:                     return L"CLOUD F"s;
-	case IO_REPARSE_TAG_APPEXECLINK:                 return L"APPEXECLINK"s;
-	case IO_REPARSE_TAG_PROJFS:                      return L"PROJFS"s;
-	case IO_REPARSE_TAG_STORAGE_SYNC:                return L"STORAGE SYNC"s;
-	case IO_REPARSE_TAG_WCI_TOMBSTONE:               return L"WCI TOMBSTONE"s;
-	case IO_REPARSE_TAG_UNHANDLED:                   return L"UNHANDLED"s;
-	case IO_REPARSE_TAG_ONEDRIVE:                    return L"ONEDRIVE"s;
-	case IO_REPARSE_TAG_PROJFS_TOMBSTONE:            return L"PROJFS TOMBSTONE"s;
-	case IO_REPARSE_TAG_AF_UNIX:                     return L"AF UNIX"s;
-	case IO_REPARSE_TAG_LX_SYMLINK:                  return L"LX SYMLINK"s;
-	case IO_REPARSE_TAG_LX_FIFO:                     return L"LX FIFO"s;
-	case IO_REPARSE_TAG_LX_CHR:                      return L"LX CHR"s;
-	case IO_REPARSE_TAG_LX_BLK:                      return L"LX BLK"s;
-	case IO_REPARSE_TAG_DRIVE_EXTENDER:              return L"DRIVE EXTENDER"s;
-	case IO_REPARSE_TAG_FILTER_MANAGER:              return L"FILTER MANAGER"s;
-	case IO_REPARSE_TAG_IIS_CACHE:                   return L"IIS CACHE"s;
-	case IO_REPARSE_TAG_APPXSTRM:                    return L"APPXSTRM"s;
-	case IO_REPARSE_TAG_DFM:                         return L"DFM"s;
+	case IO_REPARSE_TAG_HSM:                         return L"HSM"sv;
+	case IO_REPARSE_TAG_HSM2:                        return L"HSM2"sv;
+	case IO_REPARSE_TAG_SIS:                         return L"SIS"sv;
+	case IO_REPARSE_TAG_WIM:                         return L"WIM"sv;
+	case IO_REPARSE_TAG_CSV:                         return L"CSV"sv;
+	case IO_REPARSE_TAG_DFS:                         return L"DFS"sv;
+	case IO_REPARSE_TAG_DFSR:                        return L"DFSR"sv;
+	case IO_REPARSE_TAG_DEDUP:                       return L"DEDUP"sv;
+	case IO_REPARSE_TAG_NFS:                         return L"NFS"sv;
+	case IO_REPARSE_TAG_FILE_PLACEHOLDER:            return L"FILE PLACEHOLDER"sv;
+	case IO_REPARSE_TAG_WOF:                         return L"WOF"sv;
+	case IO_REPARSE_TAG_WCI:                         return L"WCI"sv;
+	case IO_REPARSE_TAG_WCI_1:                       return L"WCI 1"sv;
+	case IO_REPARSE_TAG_GLOBAL_REPARSE:              return L"GLOBAL_REPARSE"sv;
+	case IO_REPARSE_TAG_CLOUD:                       return L"CLOUD"sv;
+	case IO_REPARSE_TAG_CLOUD_1:                     return L"CLOUD 1"sv;
+	case IO_REPARSE_TAG_CLOUD_2:                     return L"CLOUD 2"sv;
+	case IO_REPARSE_TAG_CLOUD_3:                     return L"CLOUD 3"sv;
+	case IO_REPARSE_TAG_CLOUD_4:                     return L"CLOUD 4"sv;
+	case IO_REPARSE_TAG_CLOUD_5:                     return L"CLOUD 5"sv;
+	case IO_REPARSE_TAG_CLOUD_6:                     return L"CLOUD 6"sv;
+	case IO_REPARSE_TAG_CLOUD_7:                     return L"CLOUD 7"sv;
+	case IO_REPARSE_TAG_CLOUD_8:                     return L"CLOUD 8"sv;
+	case IO_REPARSE_TAG_CLOUD_9:                     return L"CLOUD 9"sv;
+	case IO_REPARSE_TAG_CLOUD_A:                     return L"CLOUD A"sv;
+	case IO_REPARSE_TAG_CLOUD_B:                     return L"CLOUD B"sv;
+	case IO_REPARSE_TAG_CLOUD_C:                     return L"CLOUD C"sv;
+	case IO_REPARSE_TAG_CLOUD_D:                     return L"CLOUD D"sv;
+	case IO_REPARSE_TAG_CLOUD_E:                     return L"CLOUD E"sv;
+	case IO_REPARSE_TAG_CLOUD_F:                     return L"CLOUD F"sv;
+	case IO_REPARSE_TAG_APPEXECLINK:                 return L"APPEXECLINK"sv;
+	case IO_REPARSE_TAG_PROJFS:                      return L"PROJFS"sv;
+	case IO_REPARSE_TAG_STORAGE_SYNC:                return L"STORAGE SYNC"sv;
+	case IO_REPARSE_TAG_WCI_TOMBSTONE:               return L"WCI TOMBSTONE"sv;
+	case IO_REPARSE_TAG_UNHANDLED:                   return L"UNHANDLED"sv;
+	case IO_REPARSE_TAG_ONEDRIVE:                    return L"ONEDRIVE"sv;
+	case IO_REPARSE_TAG_PROJFS_TOMBSTONE:            return L"PROJFS TOMBSTONE"sv;
+	case IO_REPARSE_TAG_AF_UNIX:                     return L"AF UNIX"sv;
+	case IO_REPARSE_TAG_LX_SYMLINK:                  return L"LX SYMLINK"sv;
+	case IO_REPARSE_TAG_LX_FIFO:                     return L"LX FIFO"sv;
+	case IO_REPARSE_TAG_LX_CHR:                      return L"LX CHR"sv;
+	case IO_REPARSE_TAG_LX_BLK:                      return L"LX BLK"sv;
+	case IO_REPARSE_TAG_DRIVE_EXTENDER:              return L"DRIVE EXTENDER"sv;
+	case IO_REPARSE_TAG_FILTER_MANAGER:              return L"FILTER MANAGER"sv;
+	case IO_REPARSE_TAG_IIS_CACHE:                   return L"IIS CACHE"sv;
+	case IO_REPARSE_TAG_APPXSTRM:                    return L"APPXSTRM"sv;
+	case IO_REPARSE_TAG_DFM:                         return L"DFM"sv;
 	default:                                         return {};
 	}
 }
