@@ -62,7 +62,7 @@ class far_sqlite_exception : public far_exception
 class SQLiteDb: noncopyable, virtual protected transactional
 {
 public:
-	using busy_handler = int(*)(void*, int);
+	using busy_handler = int(*)(void*, int) noexcept;
 	static bool library_load();
 	static void library_free();
 
